# Saavn-Shift

./: .gitignore  README.md  pyproject.toml
src/saavnshift/: __init__.py  __main__.py  auth.py  browser.py  cli.py  config.py  csv_io.py  jiosaavn.py  models.py  transfer.py
tests/: test_csv_io.py
